Fix layout issues and 'jumping'

--- a/src/assets/scss/_breakpoints.scss
+++ b/src/assets/scss/_breakpoints.scss
@@ -30,3 +30,31 @@
     }
   }
 }
+
+@mixin breakpoint-h($point) {
+  @if $point == xxl {
+    @media only screen and (min-height: 1400px) {
+      @content;
+    }
+  } @else if $point == xl {
+    @media only screen and (min-height: 1200px) {
+      @content;
+    }
+  } @else if $point == lg {
+    @media only screen and (min-height: 992px) {
+      @content;
+    }
+  } @else if $point == md {
+    @media only screen and (min-height: 768px) {
+      @content;
+    }
+  } @else if $point == sm {
+    @media only screen and (min-height: 600px) {
+      @content;
+    }
+  } @else if $point == smonly {
+    @media only screen and (max-height: 600px) {
+      @content;
+    }
+  }
+}
