--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -38,6 +38,7 @@ main {
 					border: 0.5em solid $space-cadet;
 					border-radius: 50%;
 					box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+					background-color: $space-cadet;
 				}
 
 				h1 {
